// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password component should match saved snapshot (passwordObject.isVariantsOpened === false) 1`] = `
<div
  className="password"
>
  <span
    className="password__before-text icon-right-open"
    data-tip="Варианты пароля с разделителями"
    onClick={[Function]}
  />
  <div
    className="password__text"
    data-tip="Нажмите на иконку справа для копирования пароля в буфер обмена"
    id="pass"
  >
    word1 word2 word3
  </div>
  <span
    className="clipboard password__after-text icon-copy"
    data-clipboard-target="#pass"
    data-delay-hide={500}
    data-event="click"
    data-iscapture={true}
    data-tip="Пароль скопирован в буфер обмена"
  />
  <ToolTip />
</div>
`;

exports[`Password component should match saved snapshot (passwordObject.isVariantsOpened === true) 1`] = `
<div
  className="password"
>
  <span
    className="password__before-text icon-down-open"
    data-tip="Варианты пароля с разделителями"
    onClick={[Function]}
  />
  <div
    className="password__text"
    data-tip="Нажмите на иконку справа для копирования пароля в буфер обмена"
    id="pass"
  >
    word1 word2 word3
  </div>
  <span
    className="clipboard password__after-text icon-copy"
    data-clipboard-target="#pass"
    data-delay-hide={500}
    data-event="click"
    data-iscapture={true}
    data-tip="Пароль скопирован в буфер обмена"
  />
  <ToolTip />
</div>
`;
